# boss_analysis

./: .gitignore  README.md  boss_job_download.py  config.py  local_type.py  pyproject.toml
data/: prompt.txt
screenshots/: boss 直聘岗位分析流程.graffle
src/: config.py  local_type.py  main.py  search_job.py  template.py
src/util/: common.py  fs.py  input.py
util/: fs.py
