[project]
name = "boss-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "playwright-stealth>=2.0.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
